# luckylab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  download_demo.bat  download_demo.sh  example.py  grpc_debug_viewer.py  grpc_multicam_test.py  pyproject.toml  run_debug_viewer.bat  run_debug_viewer.sh  run_multicam_test.bat  run_multicam_test.sh  setup.bat  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: quality.yml  test.yml
scripts/: diff_capabilities.bat  diff_capabilities.sh  download_demo.bat  download_demo.sh  list_capabilities.bat  list_capabilities.sh  list_tasks.bat  list_tasks.sh  play_il.bat  play_il.sh  play_rl.bat  play_rl.sh  run_debug_viewer.bat  run_debug_viewer.sh  run_multicam_test.bat  run_multicam_test.sh  setup.bat  setup.sh  train_il.bat  train_il.sh  train_rl.bat  train_rl.sh  validate_task.bat  validate_task.sh  visualize_dataset.bat  visualize_dataset.sh
src/luckylab/: __init__.py  cli.py
src/luckylab/configs/: __init__.py  domain_randomization.py  simulation_contract.py
src/luckylab/contracts/: __init__.py  manifest_cache.py  negotiation.py  task_contract.py
src/luckylab/entity/: __init__.py  data.py  entity.py  scene.py
src/luckylab/envs/: __init__.py  manager_based_rl_env.py  types.py
src/luckylab/envs/mdp/: __init__.py  events.py  observations.py  rewards.py  terminations.py
src/luckylab/envs/mdp/actions/: __init__.py  actions_config.py  cpg_action.py  joint_actions.py
src/luckylab/il/: __init__.py  augment.py  config.py  trainer.py
src/luckylab/il/lerobot/: __init__.py  trainer.py  wrapper.py
src/luckylab/managers/: __init__.py  action_manager.py  command_manager.py  curriculum_manager.py  event_manager.py  manager_base.py  manager_term_config.py  observation_manager.py  reward_manager.py  scene_entity_config.py  termination_manager.py
src/luckylab/rl/: __init__.py  common.py  config.py  models.py  skrl_wrapper.py  trainer.py  vecenv_wrapper.py  wrapper.py
src/luckylab/rl/sb3/: __init__.py  trainer.py  wrapper.py
src/luckylab/rl/skrl/: __init__.py  models.py  trainer.py  wrapper.py
src/luckylab/scene/: __init__.py  scene.py
src/luckylab/scripts/: demo.py  diff_capabilities.py  list_capabilities.py  list_envs.py  play.py  train.py  validate_task.py  visualize_dataset.py
src/luckylab/tasks/: __init__.py  registry.py
src/luckylab/tasks/blockstacking/: __init__.py
src/luckylab/tasks/pickandplace/: __init__.py  il_cfg.py
src/luckylab/tasks/velocity/: __init__.py  velocity_env_cfg.py
src/luckylab/tasks/velocity/config/: __init__.py
src/luckylab/tasks/velocity/config/go1/: __init__.py  env_cfg.py  env_cfgs.py  rl_cfg.py
src/luckylab/tasks/velocity/config/go2/: __init__.py  env_cfgs.py  rl_cfg.py
src/luckylab/tasks/velocity/mdp/: __init__.py  commands.py  curriculum.py  observations.py  rewards.py  terminations.py  velocity_command.py
src/luckylab/utils/: __init__.py  importer.py  iteration_logger.py  keyboard.py  logging.py  math.py  metrics.py  nan_guard.py  random.py  rerun_logger.py  spaces.py  string.py  torch.py  torch_utils.py  video_decode_patch.py  video_recorder.py
src/luckylab/utils/buffers/: __init__.py  circular_buffer.py  delay_buffer.py
src/luckylab/utils/noise/: __init__.py  noise_cfg.py  noise_model.py
src/luckylab/viewer/: __init__.py  debug_draw.py  run_policy.py
src/luckylab/visualization/: __init__.py  debug_draw.py
tests/: test_debug_visualizer.py  test_entity_data.py  test_env.py  test_managers.py  test_nan_guard_tensors.py  test_registry.py  test_rl.py  test_skrl_wrapper.py  test_torch_backends.py  test_utils.py
