[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luckylab"
version = "0.1.0"
description = "RL training environments for LuckyRobots"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Ethan M. Clark", email = "eclark715@gmail.com"},
]
keywords = ["robotics", "deep", "reinforcement", "learning", "luckyrobots", "environment", "gym", "gymnasium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "luckyrobots>=0.1.70",
    "gymnasium>=0.29.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "skrl>=1.3.0",
]

[project.optional-dependencies]
# JAX backend (install JAX with GPU support separately for GPU training)
jax = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.2.0",
]
# Logging backends
wandb = ["wandb>=0.16.0"]
tensorboard = ["tensorboard>=2.15.0"]
# All logging
logging = [
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
]
# Full installation with all optional dependencies
all = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/luckyrobots/luckylab"
Repository = "https://github.com/luckyrobots/luckylab"
Issues = "https://github.com/luckyrobots/luckylab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/luckylab"]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "debugpy>=1.8.1",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    "example.py",
    ".git",
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
