[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luckylab"
version = "0.1.0"
description = "RL training environments for LuckyRobots"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Ethan M. Clark", email = "eclark715@gmail.com"},
]
keywords = ["robotics", "deep", "reinforcement", "learning", "luckyrobots", "environment", "gym", "gymnasium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "luckyrobots>=0.1.78",
    "gymnasium>=0.29.1",
    "numpy>=1.24.0",
    "prettytable>=3.10.0",
    "torch>=2.0.0",
    "skrl>=1.3.0",
    "stable-baselines3>=2.0.0",
    "tensorboard>=2.15.0",
    "tyro>=0.8.0",
    "wandb>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/luckyrobots/luckylab"
Repository = "https://github.com/luckyrobots/luckylab"
Issues = "https://github.com/luckyrobots/luckylab/issues"

[project.entry-points."luckylab.tasks"]
velocity = "luckylab.tasks"

[tool.hatch.build.targets.wheel]
packages = ["src/luckylab"]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "debugpy>=1.8.1",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    "example.py",
    ".git",
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
